--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="Build/blwt.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/blwt.data.gz",
-        frameworkUrl: "Build/blwt.framework.js.gz",
-        codeUrl: "Build/blwt.wasm.gz",
+        dataUrl: "Build/blwt.data",
+        frameworkUrl: "Build/blwt.framework.js",
+        codeUrl: "Build/blwt.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MrMarL",
         productName: "blwt",
